syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Server.gRPC.Controllers";

package project;

service Project {
	rpc CreateProject (ProjectCreateRequest) returns (ProjectCreateReply);
	rpc GetProjects (ProjectGetRequest) returns (ProjectReply);
}

message ProjectCreateRequest {
	int32 project_id = 1;
	int32 order_id = 2;
	string name = 3;
	string description = 4;
	string manager = 5;
	string client = 6;
	string sector = 7;
}

message ProjectGetRequest {
	string search = 1;
	int64 limit = 2;
}

message ProjectCreateReply {
	int32 project_id = 1;
}

message ProjectReply {
	repeated ProjectModel projects = 1;
}

message ProjectModel {
	int32 project_id = 1;
	int32 order_id = 2;
	string name = 3;
	string description = 4;
	string manager = 5;
	string client = 6;
	string sector = 7;
	google.protobuf.Timestamp created_at = 8;
	google.protobuf.Timestamp updated_at = 9;
}